--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@koa/router": "^13.1.0",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
-    "koa-combine-routers": "^4.0.2"
+    "koa-combine-routers": "^4.0.2",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
