--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-combine-routers": "^4.0.2",
+    "nodemailer": "^6.9.15",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
